@@ -137,14 +137,14 @@ class ImtWeight(object):
         return '<%s %s>' % (self.__class__.__name__, self.dic)
 
 
-def keyno(branch_id, bsno, brno, fname='', chars=BASE183):
+def keyno(branch_id, bsno, brno):
     """
     :param branch_id: a branch ID string
     :param bsno: number of the branchset (starting from 0)
     :param brno: number of the branch in the branchset (starting from 0)
     :returns: a short unique alias for the branch_id
     """
-    return chars[brno] + str(bsno)
+    return BASE183[brno] + str(bsno)
 
 
 class GsimLogicTree(object):
@@ -332,7 +332,7 @@ class GsimLogicTree(object):
                 gsim._toml = _toml
                 new.values[trt] = [gsim]
                 br_id = 'gA' + str(trti)
-                new.shortener[br_id] = keyno(br_id, trti, 0, self.filename)
+                new.shortener[br_id] = keyno(br_id, trti, 0)
                 branch = BranchTuple(trt, br_id, gsim, sum(weights), True)
                 new.branches.append(branch)
             else:
@@ -415,8 +415,7 @@ class GsimLogicTree(object):
                     branch_id, gsim, weight, effective)
                 if effective:
                     branches.append(bt)
-                    self.shortener[branch_id] = keyno(
-                        branch_id, bsno, brno, self.filename)
+                    self.shortener[branch_id] = keyno(branch_id, bsno, brno)
                 if os.environ.get('OQ_REDUCE'):  # take the first branch only
                     bt.weight.dic['weight'] = 1.
                     break
