@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Better error message for logic trees with branchsets exceeding the limit
   * Fixed a bug with mutex sources and disagg_by_src
 
   [Manuela Villani, Kendra Johnson, Michele Simionato]
